cmake_minimum_required(VERSION 3.30)
project(Assignments)

set(CMAKE_CXX_STANDARD 20)

add_executable(OOP OOP.cpp)
add_executable(inherit inherit.cpp)
add_executable(virtual virtual.cpp)
add_executable(overloadOperator overloadOperator.cpp)
add_executable(deepcopy deepcopy.cpp)
add_executable(list List.cpp)
add_executable(library Library.cpp)
add_executable(game Game/game.cpp Game/Character.cpp Game/Equipment.cpp)
add_executable(ArtScoring ArtScoring.cpp)
add_executable(contactbook ContactBook/run.cpp ContactBook/ContactBook.cpp ContactBook/Contact.cpp)
add_executable(grademanagement GradeManagement.cpp)
add_executable(graphics Graphics.cpp)