cmake_minimum_required(VERSION 3.30)
project(Notes)

set(CMAKE_CXX_STANDARD 20)

add_executable(IO 001IO.cpp)
add_executable(localandglobal 002localandglocal.cpp)
add_executable(override 003override.cpp)
add_executable(quote 004quote.cpp)
add_executable(OOP 005OOP.cpp)
add_executable(staticMethods 007staticMethods.cpp)
add_executable(initializationList 008initializationList.cpp)
add_executable(vector 009Vector.cpp)
add_executable(friend 010friend.cpp)
add_executable(inherit 011inherit.cpp)
add_executable(virtual 012virtual.cpp)
add_executable(PureVirtualFunction 013PureVirtualFunction.cpp)
add_executable(overrideOperator 014overloadOperator.cpp)